fixing spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,4 @@
+
 h1{
     text-align:center;
     font-size: 50px;
@@ -11,6 +12,12 @@ h2{
     color: white;
     font-family: 'Garamond';
 }
+h3{
+    text-align:center;
+    font-size: 20px;
+    color: white;
+    font-family: 'Garamond';
+}
 p{
     text-align:center;
     font-size: 20px;
@@ -19,6 +26,7 @@ p{
     
 }
 .s1 {
+    //Intro Slide
 
     background: url('../images/bowls.png');
     background-size: cover;
@@ -26,30 +34,35 @@ p{
 }
 
 .s2 {
+    //Motivation
 
     background: url('../images/spoons.png');
     background-size: cover;
+    padding-left: 80px;
+    padding-right: 80px;
     
 }
 
 .s3 {
+    //Data and Description
 
     background: url('../images/MN.png');
     background-size:cover;
     
 }
 .s4 {
+    //Pictogram
 
-    background: url('../images/grey.png');
+    background-color: #333333;
     background-size:cover;
-    text{
-        fill:white;
-    }
+   
+    padding-left: 80px;
+    padding-right: 80px;
     
 }
 .s5 {
-
-    background: url('../images/grey.png');
+    //sunburst
+    background-color: #333333;
     background-size:cover;
     text{
         fill:white;
@@ -57,9 +70,22 @@ p{
     
 }
 .s6 {
-
-    background: url('../images/grey.png');
-    background-size:cover;
+    //stacked bar
+    background-color: #333333;
+    text{
+        fill:white;
+    }
+    padding-left: 80px;
+    padding-right: 80px;
     
+}
+
+.s7{
+    // map
+    background-color: #333333;
+    background-size:cover;
+    padding-top: 80px;
+    padding-bottom: 80px;
+
 }
 
